# sortgate

./: .gitignore  README.md  pyproject.toml
sortgate/: audit_log.py  config.py  exceptions.py  models.py  query_builder.py  session_registry.py  sort_validator.py  spec_parser.py  types.py
tests/: conftest.py  test_sortgate_baseline.py
