[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sortgate"
version = "0.1.0"
description = "ORDER BY clause assembly helper for ORM-style query builders"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-json-report>=1.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sortgate*"]
exclude = ["tests*", "grader*", "annotations*", "reviews*"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "__eval_*.py"]
testpaths = ["tests"]
